citing best refs

--- a/emi/emi.tex
+++ b/emi/emi.tex
@@ -5,7 +5,9 @@
 \usepackage{siunitx}
 \begin{document}
 
-\title{Electro Magnetic Interference and HF Radio Receivers}
+\title{EMI on Lower HF}
+\author{David Rowe VK5DGR}
+
 \maketitle
 
 \section{Introduction}
@@ -16,7 +18,15 @@ We are slowly losing the ability to use analog SSB in urban areas.  Many Hams re
 
 Our target radio signals are from distant sources, weak, narrow band, and evolve slowly in time. Human generated radio noise tends to be very strong, wideband, with a time domain envelope that evolves quickly in time.  It is often radiated from nearby sources, such as power lines lines and house wiring a few 10s of meters from our antenna.  It has significant structure, so can be interpreted as an interfering signal, rather than random noise.
 
-Modern radios are very good at removing unwanted narrowband signals, using frequency selectivity and good strong signal performance.  This report explores the nature of human generated noise and explores techniques for reducing it's effects and increasing the SNR of received signals at urban locations.
+Modern radios are very good at removing unwanted narrowband signals, using frequency selectivity and good strong signal performance.  This document is a study of human generated noise and techniques for reducing it's effects and increasing the SNR of wanted signals at urban locations.
+
+This report is a personal study by the author, written in order to further his understanding of the topic. No claim of any orginal work is made.
+
+\subsection{Summary}
+
+\subsection{Selected References}
+
+There are a lot of on-line opinions, hearsay, rules of thumb, and subjective reports on this topic.  Favourites sources of the author include the W8JI web site \cite{w8ji_radio_noise} for an excellent and concise overview of HF noise, Owen Duffy's blog \cite{duffy_lig}	for in depth and knowledgable treatment of many antenna topics, and the web site of LZ1AQ \cite{lz1aq} for his treatment of phasing and small loop antennas. 
 
 \section{Radio Noise Signals from Human Activity}
 
